kubernetes/applications/apps/tasmoadmin/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasmoadmin-cloudflare
  namespace: apps
  labels:
    app: tasmoadmin
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: tasmoadmin.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasmoadmin
                port:
                  number: 80
